header + layout + config

--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -7,12 +7,21 @@
 /* Paths */
 /* Grid setup */
 /* Colour palette */
-$black: #000;
+$black: #1c1c1c;
 $white: #fff;
 $light-gray: #f1f1f1;
 
+$bg: #fafafa;
+$forground-color: #252b42;
+
+$gray-100: #737373;
+$orange-100: #ffa62b;
+$blue-100: #00a0c1;
+$blue-200: #16697a;
+$blue-300: #8ec2f2;
+
 $body-background-color: #333;
-$foreground-color: #fff;
+// $foreground-color: #fff;
 $caption-color: #464646;
 $accent-color: #999;
 $link-color: #ec1f4e;
