--- a/src/scss/demo.scss
+++ b/src/scss/demo.scss
@@ -18,7 +18,7 @@ header {
   border-radius: 5px;
 
   small {
-    font-size: .5em;
+    font-size: 0.5em;
 
     img {
       display: inline;
@@ -69,14 +69,14 @@ main {
 }
 
 .badges {
-  line-height: .5em;
+  line-height: 0.5em;
 
   img {
     display: inline;
   }
 
   h6 {
-    font-size: .5em;
+    font-size: 0.5em;
   }
 }
 
