--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -23,4 +23,97 @@
 @import 'dirty/hacks';
 
 /* Demo Page styles */
-@import 'demo';
+// @import 'demo';
+
+/* Main styles */
+body {
+  position: relative;
+  background: $bg;
+  color: $forground-color;
+
+  & > img.cover-bg-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100vw;
+    max-height: 100vh;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  @media screen and (max-width: 1050px) {
+    padding: 0px 2rem;
+  }
+}
+
+.container {
+  max-width: 1050px;
+  margin: 0 auto;
+
+  @media screen and (min-width: 1440px) {
+    max-width: 1280px;
+  }
+}
+
+a {
+  color: $white;
+}
+
+header {
+  padding: 36px 0px;
+  display: flex;
+  align-items: center;
+  gap: 120px;
+
+  a {
+    color: $forground-color;
+    display: inline-block;
+
+    h2 {
+      font-size: 24px;
+      font-weight: bold;
+    }
+  }
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex: 1;
+
+    a {
+      color: $gray-100;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+
+      font-weight: 600;
+      font-size: 14px;
+      letter-spacing: 0.2px;
+    }
+
+    button {
+      border: none;
+      background: none;
+      cursor: pointer;
+    }
+  }
+}
+
+main {
+  section {
+    &.hero {
+      // img {
+      //   position: absolute;
+      //   width: 100vw;
+      // }
+    }
+  }
+}
