--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -2,10 +2,16 @@
  * Fonts
 */
 
-@font-face {
-  font-family: 'DINP-R';
-  src: url("../fonts/DINPro-Regular.eot?") format("eot"),
-  url("../fonts/DINPro-Regular.woff") format("woff"),
-  url("../fonts/DINPro-Regular.ttf") format("truetype");
+// @font-face {
+//   font-family: 'DINP-R';
+//   src: url('../fonts/DINPro-Regular.eot?') format('eot'), url('../fonts/DINPro-Regular.woff') format('woff'),
+//     url('../fonts/DINPro-Regular.ttf') format('truetype');
+//   font-style: normal;
+// }
+
+.montserrat-font {
+  font-family: 'Montserrat', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
   font-style: normal;
 }
