--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -30,6 +30,7 @@ body {
   position: relative;
   background: $bg;
   color: $forground-color;
+  letter-spacing: 0.2px;
 
   & > img.cover-bg-image {
     position: absolute;
@@ -41,10 +42,6 @@ body {
     object-fit: cover;
     object-position: center;
   }
-
-  @media screen and (max-width: 1050px) {
-    padding: 0px 2rem;
-  }
 }
 
 .container {
@@ -54,66 +51,202 @@ body {
   @media screen and (min-width: 1440px) {
     max-width: 1280px;
   }
+
+  @media screen and (max-width: 1050px) {
+    padding: 0px 2rem;
+  }
 }
 
 a {
   color: $white;
 }
 
-header {
-  padding: 36px 0px;
-  display: flex;
-  align-items: center;
-  gap: 120px;
+button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  transition: all ease 200ms;
 
-  a {
-    color: $forground-color;
-    display: inline-block;
+  &.primary {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 28px;
+    padding: 10px 35px;
+    border-radius: 35px;
 
-    h2 {
-      font-size: 24px;
-      font-weight: bold;
+    &:active {
+      transform: scale(0.98);
+    }
+
+    &.outline {
+      border: 2px solid $blue-100;
+      color: $blue-100;
+    }
+    &.fill {
+      background-color: $orange-100;
+      color: $white;
     }
   }
 
-  nav {
+  &.menu {
+    &:active {
+      transform: scale(0.95);
+    }
+  }
+}
+
+img,
+button {
+  user-select: none;
+}
+header {
+  position: sticky;
+  transition: all ease 200ms;
+  top: -15px;
+  padding: 35px 0px 20px;
+
+  &.sticky {
+    background-color: rgba($color: $white, $alpha: 0.3);
+    backdrop-filter: blur(8px);
+
+    /* Прикольний ефект */
+    // background-image: radial-gradient(rgba(0, 0, 0, 0) 1px, rgba($color: $white, $alpha: 0.5) 1px);
+    // background-size: 4px 4px;
+
+    & > div {
+      nav {
+        a {
+          color: $body-background-color;
+        }
+      }
+    }
+  }
+
+  & > div {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    flex: 1;
+    gap: 120px;
 
     a {
-      color: $gray-100;
-      &:hover {
-        text-decoration: underline;
+      color: $forground-color;
+      display: inline-block;
+
+      h2 {
+        font-size: 24px;
+        font-weight: bold;
       }
     }
 
-    ul {
-      list-style: none;
+    nav {
       display: flex;
-      gap: 20px;
+      justify-content: space-between;
+      align-items: center;
+      flex: 1;
 
-      font-weight: 600;
-      font-size: 14px;
-      letter-spacing: 0.2px;
-    }
+      a {
+        transition: all ease 200ms;
+        color: $gray-100;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
 
-    button {
-      border: none;
-      background: none;
-      cursor: pointer;
+      ul {
+        list-style: none;
+        display: flex;
+        gap: 20px;
+
+        font-weight: 600;
+        font-size: 14px;
+        letter-spacing: 0.2px;
+      }
     }
   }
 }
 
 main {
   section {
+    p {
+      color: $gray-100;
+      display: inline-block;
+    }
+
     &.hero {
-      // img {
-      //   position: absolute;
-      //   width: 100vw;
-      // }
+      padding: 70px 0px;
+
+      h1 {
+        font-size: 58px;
+        font-weight: 800;
+        line-height: 80px;
+      }
+
+      h4 {
+        padding: 35px 0px;
+        color: $gray-100;
+      }
+
+      div:nth-of-type(1) {
+        display: flex;
+        gap: 15px;
+      }
+
+      div:nth-of-type(2) {
+        padding-top: 80px;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+        // grid-auto-columns: minmax(320px, 1fr);
+        // grid-auto-flow: column;
+        // align-items: center;
+        gap: 30px;
+
+        div.card-hero {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 10px;
+          padding: 35px 40px;
+          background: $white;
+          box-shadow: 0 13px 19px 0 rgba(0, 0, 0, 0.07);
+          transition: all ease 200ms;
+
+          h3 {
+            line-height: 32px;
+            letter-spacing: 0.1px;
+            font-size: 24px;
+            font-weight: 700;
+            transition: all ease 200ms;
+          }
+
+          p {
+            font-size: 14px;
+            font-weight: 500;
+            transition: all ease 200ms;
+          }
+
+          & svg {
+            fill: $blue-100;
+            stroke: $blue-100;
+            transition: all ease 200ms;
+          }
+
+          &:hover {
+            background: $blue-100;
+
+            & h3 {
+              color: $white;
+            }
+
+            & p {
+              color: $white;
+            }
+
+            & svg {
+              fill: $white;
+              stroke: $white;
+            }
+          }
+        }
+      }
     }
   }
 }
