--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -15,6 +15,7 @@ $bg: #fafafa;
 $forground-color: #252b42;
 
 $gray-100: #737373;
+$gray-200: #3e3e3e;
 $orange-100: #ffa62b;
 $blue-100: #00a0c1;
 $blue-200: #16697a;
