--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -26,11 +26,16 @@
 // @import 'demo';
 
 /* Main styles */
+* {
+  scroll-behavior: smooth;
+}
+
 body {
   position: relative;
   background: $bg;
   color: $forground-color;
   letter-spacing: 0.2px;
+  overflow-x: hidden;
 
   & > img.cover-bg-image {
     position: absolute;
@@ -38,14 +43,31 @@ body {
     left: 0;
     z-index: -1;
     width: 100vw;
-    max-height: 100vh;
+    height: 735px;
+    // max-height: 100vh;
     object-fit: cover;
-    object-position: center;
+    object-position: center top;
+
+    @media screen and (max-width: 768px) {
+      // object-position: 0 69px;
+      height: 100%;
+      max-height: 100vh;
+    }
+  }
+}
+
+.anchor {
+  position: relative;
+  display: block;
+  top: -140px;
+  @media screen and (max-width: 768px) {
+    top: -400px;
   }
 }
 
 .container {
   max-width: 1050px;
+  min-width: 0%;
   margin: 0 auto;
 
   @media screen and (min-width: 1440px) {
@@ -55,6 +77,11 @@ body {
   @media screen and (max-width: 1050px) {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  @media screen and (max-width: 768px) {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
@@ -89,7 +116,27 @@ button {
     }
   }
 
+  &.get-in-touch {
+    border-radius: 5px;
+    line-height: 24px;
+    letter-spacing: 0.2px;
+    font-weight: 600;
+    font-size: 14px;
+    padding: 10px 20px;
+    border: 2px solid $orange-100;
+    color: $orange-100;
+
+    &:active {
+      transform: scale(0.98);
+    }
+  }
+
   &.menu {
+    display: none;
+    @media screen and (max-width: 768px) {
+      display: block;
+    }
+
     &:active {
       transform: scale(0.95);
     }
@@ -105,30 +152,83 @@ header {
   z-index: 10;
   transition: all ease 200ms;
   top: -15px;
-  padding: 35px 0px 20px;
+  padding: 35px 0px 0px;
+
+  @media screen and (max-width: 768px) {
+    padding: 20px 0px 0px;
+    top: 0px;
+    background-color: #fafafa;
+  }
+
+  & > div.header-menu-mobile {
+    transition: height ease 600ms, opacity ease 800ms;
+    opacity: 0;
+    height: 0px;
+    margin-top: 20px;
+    background-color: #fafafa;
+
+    &.open {
+      opacity: 1;
+      height: 305px;
+
+      & > nav {
+        pointer-events: all;
+        transform: translateX(0%);
+        transition: all ease 400ms 200ms;
+      }
+    }
+
+    & > nav {
+      transition: all ease 400ms;
+      transform: translateX(-100%);
+      padding: 40px 0px;
+      pointer-events: none;
+      text-align: center;
+
+      & > ul > li > a {
+        transition: all ease 200ms;
+        color: $gray-100;
+        line-height: 45px;
+        font-weight: 400;
+        font-size: 30px;
+
+        &:hover {
+          color: $forground-color;
+        }
+      }
+    }
+  }
 
   &.sticky {
-    background-color: rgba($color: $white, $alpha: 0.3);
-    backdrop-filter: blur(8px);
+    background-color: rgba($color: $white, $alpha: 0.5);
+    backdrop-filter: blur(6px);
     box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.07);
 
     /* Прикольний ефект */
     // background-image: radial-gradient(rgba(0, 0, 0, 0) 1px, rgba($color: $white, $alpha: 0.5) 1px);
     // background-size: 4px 4px;
 
-    & > div {
+    & > div.header-menu-mobile {
+      background-color: transparent;
+    }
+
+    & > div:first-of-type {
       nav {
+        ul {
+          transform: translateX(60px);
+        }
+
         a {
-          color: $body-background-color;
+          color: $gray-200;
         }
       }
     }
   }
 
-  & > div {
+  & > div:first-of-type {
     display: flex;
     align-items: center;
-    gap: 120px;
+    gap: 60px;
 
     a {
       color: $forground-color;
@@ -141,20 +241,30 @@ header {
     }
 
     nav {
+      transition: all ease 400ms 200ms;
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-start;
       align-items: center;
       flex: 1;
+
+      @media screen and (max-width: 768px) {
+        justify-content: flex-end;
+      }
 
       a {
         transition: all ease 200ms;
         color: $gray-100;
+        &.white-link {
+          color: $white;
+          text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+        }
         &:hover {
           text-decoration: underline;
         }
       }
 
       ul {
+        transition: all ease 400ms 200ms;
         list-style: none;
         display: flex;
         gap: 20px;
@@ -162,6 +272,10 @@ header {
         font-weight: 600;
         font-size: 14px;
         letter-spacing: 0.2px;
+
+        @media screen and (max-width: 768px) {
+          display: none;
+        }
       }
     }
   }
@@ -177,34 +291,66 @@ main {
     }
 
     &.hero {
-      padding-top: 70px;
+      padding-top: 80px;
 
       h1 {
         font-size: 58px;
         font-weight: 800;
         line-height: 80px;
+        transition: all ease 200ms;
+
+        @media screen and (max-width: 768px) {
+          font-size: 40px;
+          font-weight: 700;
+          line-height: 50px;
+          text-align: center;
+        }
       }
 
       h4 {
         padding: 35px 0px;
         color: $gray-100;
+
+        @media screen and (max-width: 768px) {
+          text-align: center;
+        }
       }
 
-      div:nth-of-type(1) {
+      & > div:nth-of-type(1) {
         display: flex;
         gap: 15px;
+
+        @media screen and (max-width: 768px) {
+          justify-content: center;
+        }
+        @media screen and (max-width: 450px) {
+          justify-content: center;
+          flex-direction: column;
+          align-items: center;
+
+          & > button:last-of-type {
+            order: -1;
+          }
+        }
       }
 
-      div:nth-of-type(2) {
+      & > div:nth-of-type(2) {
         padding-top: 80px;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-        // grid-auto-columns: minmax(320px, 1fr);
-        // grid-auto-flow: column;
-        // align-items: center;
         gap: 30px;
 
-        div.card-hero {
+        & > div.card-hero:nth-of-type(3) {
+          @media screen and (max-width: 1050px) {
+            grid-column-end: span 2;
+          }
+
+          @media screen and (max-width: 768px) {
+            grid-column-end: auto;
+          }
+        }
+
+        & > div.card-hero {
           display: flex;
           flex-direction: column;
           align-items: flex-start;
@@ -414,22 +560,12 @@ main {
               left: 50%;
               transform: translate(-50%, -50%);
 
-              width: clamp(55px, 8vw, 170px) !important;
-              height: clamp(55px, 8vw, 170px) !important;
+              width: clamp(55px, 8vw, 140px) !important;
+              height: clamp(55px, 8vw, 140px) !important;
 
               & > svg {
-                width: clamp(55px, 8vw, 170px) !important;
-                height: clamp(55px, 8vw, 170px) !important;
-              }
-
-              @media screen and (max-width: 1050px) {
-                width: clamp(55px, 8vw, 170px) !important;
-                height: clamp(55px, 8vw, 170px) !important;
-
-                & > svg {
-                  width: clamp(55px, 12vw, 170px) !important;
-                  height: clamp(55px, 12vw, 170px) !important;
-                }
+                width: clamp(55px, 8vw, 140px) !important;
+                height: clamp(55px, 8vw, 140px) !important;
               }
             }
           }
@@ -585,6 +721,180 @@ main {
         line-height: 20px;
         text-align: center;
       }
+
+      & > div:first-of-type {
+        display: grid;
+        padding: 120px 0px;
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+        // display: flex;
+
+        & > div.get-in-touch-card:nth-of-type(2) {
+          transition: all ease 200ms;
+          background-color: #252b42;
+          color: #fff;
+          grid-row-end: span 2;
+          margin: -40px 0px;
+
+          @media screen and (max-width: 1050px) {
+            margin: 0px;
+          }
+
+          b {
+            color: #fff;
+          }
+
+          button {
+            color: #fff;
+            border-color: #fff;
+          }
+        }
+      }
+
+      div.get-in-touch-card {
+        display: grid;
+        gap: 15px;
+        padding: 50px;
+        background-color: $white;
+        place-content: center;
+        text-align: center;
+        place-items: center;
+
+        & > div {
+          display: grid;
+        }
+
+        span {
+          font-weight: 600;
+          font-size: 14px;
+          line-height: 24px;
+          letter-spacing: 0.2px;
+        }
+
+        b {
+          font-weight: 700;
+          font-size: 16px;
+          line-height: 24px;
+          letter-spacing: 0.1px;
+          text-align: center;
+          color: #252b42;
+        }
+      }
+    }
+  }
+}
+
+footer {
+  background-color: $white;
+
+  h3 {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: 0.1px;
+  }
+
+  p {
+    padding-top: 10px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.2px;
+    color: #737373;
+  }
+
+  button {
+    border-radius: 5px;
+    padding: 15px 40px;
+    background-color: $orange-100;
+    color: $white;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 28px;
+    letter-spacing: 0.2px;
+    text-align: center;
+    color: #fff;
+
+    &:active {
+      transform: scale(0.98);
+    }
+  }
+
+  & > div:first-of-type {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+    align-items: center;
+
+    @media screen and (max-width: 470px) {
+      flex-direction: column;
+    }
+  }
+
+  & > div:nth-of-type(2) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: $blue-200;
+
+    & > div {
+      display: grid;
+      row-gap: 30px;
+      grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+
+      & > div.footer-card {
+        h5 {
+          font-weight: 700;
+          font-size: 16px;
+          line-height: 24px;
+          letter-spacing: 0.1px;
+          color: #fff;
+        }
+
+        ul {
+          padding-top: 20px;
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+
+          li {
+            color: #fff;
+
+            a {
+              display: inline-flex;
+              align-items: center;
+              gap: 10px;
+
+              svg {
+                flex-grow: 1;
+                flex-shrink: 0;
+              }
+              &:hover {
+                text-decoration: underline;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  & > div:nth-of-type(3) {
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+
+    @media screen and (max-width: 470px) {
+      flex-direction: column;
+    }
+
+    & > div {
+      display: flex;
+      align-items: center;
+      gap: 20px;
     }
   }
 }
